codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__agents_navigation_help.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"  Keyboard shortcuts                                                            "
"                                                                                "
"  Compose                       Session                                         "
"  /        Commands             tab  Send message                               "
"  @        Mention files        ⌥,   Less reasoning                             "
"  !        Shell command        ⌥.   More reasoning                             "
"  ⌃j       New line             ←    Agents (empty prompt)                      "
"  ⌃v       Paste image          f4   Inspect activity                           "
"  ⌃g       External editor      ⌃c   Quit                                       "
"  ⌃r       Search history                                                       "
"  esc esc  Edit last message    Transcript (open first)                         "
"                                ⌃t            Open transcript                   "
"                                f3            Find text                         "
"                                pgup / pgdn   Scroll                            "
"                                ⌃space        Start selection                   "
"                                ⌃home / ⌃end  Top / latest                      "
"                                ⇧⌥, / ⇧⌥.     Top / latest                      "
"                                                                                "
"  /keymap customize                                                             "
"                                                                                "
"› Ask Ore to do anything                                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ? / esc close                                                                 "
